force-app/main/default/objects/File_Type_Option__mdt/File_Type_Option__mdt.object-meta.xml
<CustomObject>
    <label>File Type Option</label>
    <pluralLabel>File Type Options</pluralLabel>
</CustomObject>