force-app/main/default/objects/File_Type_Option__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>Enter api name</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>