force-app/main/default/objects/File_Type_Option__mdt/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <inlineHelpText>Please enter values as comma separated</inlineHelpText>
    <label>Types</label>
    <type>TextArea</type>
</CustomField>