force-app/main/default/objects/File_Type_Option__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_Name__c</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>